fixed footer on mobile and added padding on Ca and Mn files

--- a/website/static/states.css
+++ b/website/static/states.css
@@ -4,7 +4,7 @@
 
 
 html{
-  position: relative:
+  position: relative;
 }
 
 .blmstyle {
@@ -19,12 +19,11 @@ html{
 
 .foot-position {
 	position: absolute;
-	bottom: 0;
+	bottom: auto;
 	width: 100%;
-  height: 15.875rem;
-  overflow: hidden;
-  padding-top: 2rem;
-  padding-bottom: 30px;
+    overflow: hidden;
+    padding-top: 2rem;
+    padding-bottom: 20px;
 }
 
 
