--- a/website/static/states_style.css
+++ b/website/static/states_style.css
@@ -1,3 +1,3 @@
 .pad {
-    padding-bottom: 20em;
+    padding-bottom: 2rem;
 }
